finalizing crud operations with documentation in swagger.json
